<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlagMon</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1542649186000200</string>
    <string name="enter_comment">댓글을 입력해주세요</string>
    <string name="can_write_comment_after_login">로그인 후 덧글을 남길 수 있습니다.</string>
    <string name="nearby_photos">근거리 다른 사진</string>
    <string name="find_friend">친구찾기</string>
    <string name="find_friend_at_facebook">Facebook에서 친구 찾기</string>
    <string name="find_friend_at_twitter">Twitter에서 친구 찾기</string>
    <string name="find_friend_at_contact">연락처로부터 친구 찾기</string>
    <string name="search_by_name">이름으로 검색</string>
    <string name="got_request">받은 신청</string>
    <string name="sent_request">보낸 신청</string>
    <string name="title_find_friend_at_contact">연락처 친구 찾기</string>
    <string name="invite_friends_out_of_flagmon">Flagmon에 없는 친구들을 초대하세요</string>
    <string name="title_find_friend_at_facebook">Facebook 친구 찾기</string>
    <string name="title_find_friend_at_twitter">Twitter 친구 찾기</string>
    <string name="email">이메일</string>
    <string name="send">보내기</string>
    <string name="login">로그인</string>
    <string name="back">이전</string>
    <string name="complete">완료</string>
    <string name="album_name">앨범명:</string>
    <string name="put_in_album_name">앨범명을 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="forgot_password">비밀번호가 기억나지 않으세요?</string>
    <string name="service_policy">서비스 이용약관</string>
    <string name="tab_service_policy">서비스\n이용약관</string>
    <string name="tab_privacy_policy">개인정보\n취급방침</string>
    <string name="tab_location_policy">위치기반\n서비스 이용약관</string>
    <string name="do_camera">촬영</string>
    <string name="photo_description">사진설명</string>
    <string name="incorrect_location">좌표정보가 틀린가요?</string>
    <string name="drag_photo_for_correct_location">사진을 드래그 하여 정확한 위치를 선택해 주세요</string>
    <string name="all_share">전체 공유</string>
    <string name="friend_share">친구 공유</string>
    <string name="no_share">비공개</string>
    <string name="search">검색</string>
    <string name="put_in_name_for_search">검색할 이름을 입력하세요</string>
    <string name="user_sex">회원님의 성별은?</string>
    <string name="user_age">회원님의 나이는?</string>
    <string name="privacy_policy">개인정보 취급방침</string>
    <string name="location_policy">위치기반 서비스 이용약관</string>
    <string name="user_name">사용자이름</string>
    <string name="friend_management">친구관리</string>
    <string name="mon_management">MON관리</string>
    <string name="user_info">회원정보</string>
    <string name="notification">공지사항</string>
    <string name="alarm_setting">알림설정</string>
    <string name="posting">포스팅</string>
    <string name="view_more">더보기</string>
    <string name="invite">초대합니다!</string>
    <string name="invite_friend">친구를 초대하세요.</string>
    <string name="setting">설정</string>
    <string name="share_photo">사진을 공유하세요</string>
    <string name="wanna_exit">앱을 종료하시겠습니까?</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="bury_treasure">보물상자 묻기</string>
    <string name="mon_count">보유 mon</string>
    <string name="count_unit">개</string>
    <string name="get_right">퍼가기 권한</string>
    <string name="monCount">MON수량</string>
    <string name="boxCount">상자갯수</string>

</resources>
