<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/manageFriend"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/friend_management" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/friend_management"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#d3d3d3" />

    <LinearLayout
        android:id="@+id/manageMon"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/mon_management" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/mon_management"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#d3d3d3" />

    <LinearLayout
        android:id="@+id/showUserInfo"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/user_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/user_info"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#d3d3d3" />

    <LinearLayout
        android:id="@+id/showNoti"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/noti" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/notification"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#d3d3d3" />

    <LinearLayout
        android:id="@+id/setAlarm"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/alarm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/alarm_setting"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#d3d3d3" />


</LinearLayout>