<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p12_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="27dp"
    android:paddingRight="27dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/userSex"
            android:layout_width="0px" android:layout_weight="1"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:hint="@string/user_sex"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
        <ImageView android:id="@+id/userSexDelete"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:src="@drawable/p12_bg_icon0003"
                   android:scaleType="centerInside"
            />


    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="37dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/userBirth"
            android:layout_width="0px" android:layout_weight="1"
            android:layout_height="40dp"
            android:hint="회원님의 생년월일은?"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
        <ImageView android:id="@+id/userBirthDelete"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:src="@drawable/p12_bg_icon0003"
                   android:scaleType="centerInside"
            />


    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000" />


    <!--<EditText-->
        <!--android:id="@+id/userSex"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:drawableRight="@drawable/p12_bg_icon0003"-->
        <!--android:hint="@string/user_sex"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textColorHint="#ffffff" />-->

    <!--<EditText-->
        <!--android:id="@+id/userBirth"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginTop="37dp"-->
        <!--android:drawableRight="@drawable/p12_bg_icon0003"-->
        <!--android:hint="회원님의 생년월일은?"-->
        <!--android:inputType="text"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textColorHint="#ffffff" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/p12_icon_01" />

        <TextView
            android:id="@+id/text_service"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="showPolicy"
            android:text="@string/service_policy"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/checkbox_service"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:button="@drawable/checkbox_button_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/p12_icon_01" />

        <TextView
            android:id="@+id/text_privacy"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="showPolicy"
            android:text="@string/privacy_policy"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/checkbox_privacy"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:button="@drawable/checkbox_button_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/p12_icon_01" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="showPolicy"
            android:text="@string/location_policy"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/checkbox_location"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:button="@drawable/checkbox_button_selector" />
    </LinearLayout>

    <Button
        android:id="@+id/finishSignup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/finish_button_selector"
        android:enabled="false"
        android:onClick="finishSignUp" />


</LinearLayout>